fix text wrapping issue on profile page.

--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -13,6 +13,7 @@ nav {
   overflow: hidden;
   position: fixed;
   top: 0;
+  z-index: 999;
 
   a {
     padding-left: 1rem;
